<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/op1"
        android:icon="@drawable/ic_home"
        android:title="@string/op1"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/op2"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/op2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/op3"
        android:icon="@drawable/ic_settings"
        android:title="@string/op3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/op4"
        android:icon="@drawable/ic_logout"
        android:title="@string/op4"
        app:showAsAction="never" />

</menu>