<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="126dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/_0_usuario" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txt_userName"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txt_userLastName"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_profile_du"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_profile"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_userEmail"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_userPhone"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_edit"
            android:layout_width="242dp"
            android:layout_height="75dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_profile_bt_edit"
            android:textAlignment="center"
            android:textSize="35sp"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp" />

    </LinearLayout>
</ScrollView>